tests/myTests/parserTests/fail/test8.c
#include "Test[8] -> Expected: Fail"
#include "Tests: Var decl after Func decl"

int _function(){

}

int _var;